# arabesque

./: .README.md.kate-swp  .gitignore  CLAUDE.md  HANDOFF.md  HANDOVER.md  README.md  backtest_sample.txt  dry_run_20260221_221129.jsonl  install.sh  prop_firms.yaml  pyproject.toml  requirements.txt  test_backtest.py  test_v2.py
.claude/commands/: bilan.md  suivi.md  table-rase.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
arabesque/: __init__.py  __main__.py  audit.py  config.py  guards.py  indicators.py  models.py  notifications.py  screener.py
arabesque/analysis/: __init__.py  ablation.py  analyzer.py  metrics.py  pipeline.py  stats.py
arabesque/backtest/: __init__.py  data.py  json_output.py  metrics.py  metrics_by_label.py  pipeline.py  runner.py  signal_gen.py  (+4 more)
barres_au_sol/: README.md
config/: account_template.yaml  accounts.yaml  instruments.example.yaml  instruments.yaml  macro_calendar.csv  prop_firm_profiles.yaml  prop_firms.yaml  secrets.example.yaml  settings.example.yaml  settings.yaml  signal_filters.yaml  universes.yaml  validation_policy.yaml
docs/: ARCHITECTURE.md  AUDIT_PROP_FIRM_REPLAY_2026-05-15.md  AUDIT_VALIDATION_PIPELINE_2026-05-15.md  BACKTEST_LIVE_PARQUET_REVIEW_2026-05-15.md  BACKUP.md  BB_RPB_TSL_COMPARISON.md  DECISIONS.md  DISASTER_RECOVERY_AUDIT_2026-05-19.md  EXPERIMENT_LOG.md  GUIDE_OPERATEUR.md  HOT_PATH_MODE_2026-05-23.md  HYGIENE.md  HYPOTHESES.md  INCIDENT_DASHUSD_RESILIENCE_BROKER_2026-05-21.md  INCIDENT_GFT_POSITION_STATE_2026-05-26.md  INSTRUMENT_SELECTION.md  LIVE_ARCHITECTURE.md  PHASE4_BIS_CHECKLIST_2026-05-16.md  RESTORE.md  RESUME_PROMPT.md  REVIEW_HISTORIQUE_TRADING_2026-05-15.md  ROADMAP.md  SCOPE_TASK_39_HOT_PATH_5_2026-05-24.md  SCRIPTS.md  STABLE_vs_FRAGILE.md  START_HERE.md  STATUS.md  TECH_DEBT.md  VALIDATION_CONTRACT.md  WORKFLOW_BACKTEST.md  analysis_categories.md  decisions_log.md  instrument_selection_philosophy.md  journal.md  plan.md
pine/: arabesque_signal.pine
scripts/: README.md  adage_ombre_daily.py  analyze.py  analyze_replay.py  analyze_replay_v2.py  analyze_shadow_filters.py  audit_edge_live_vs_backtest.py  audit_execution_integrity.py  audit_sizing_distortion.py  audit_uptime_events.py  backtest.py  cap7_review_reminder.py  capture_swap_rates.py  check.sh  check_broker.py  check_execution_invariants.py  cleanup_dead_files.py  close_positions.py  compare_live_vs_backtest.py  daily_report.py  debug_pipeline.py  diag_symbol_specs.py  edge_decomposition.py  fast_validate.sh  feed_watchdog.py  fetch_data.py  fetch_incremental.sh  health_check.py  hl_funding_regime.py  install_service.sh  metals_night_spread.py  parse_live_trades.py  recalibrate_bt_sensitivity.py  replay_live_vs_theory.py  replay_signals_vs_live.py  review_broker_divergences.py  rolling_baseline_distribution.py  run_json_export.py  run_label_analysis.py  run_pipeline.py  (+8 more)
systemd/: arabesque-webhook.service
tests/: TEST_SCENARIOS.md  __init__.py  conftest.py  test_account_refresh_loop_resilient.py  test_adage_signal.py  test_audit_execution_integrity.py  test_audit_sizing_distortion.py  test_audit_uptime_events.py  test_bar_aggregator_strategy_wiring.py  test_be_source_semantics.py  test_broker_realized_pnl_journal.py  test_cli_backtest_window.py  test_config_validation_coherence.py  test_ctrader_already_logged_in_retry.py  test_ctrader_equity.py  test_ctrader_fresh_quote.py  test_ctrader_reconnect_failures_counter.py  test_ctrader_reconnect_on_demand.py  test_ctrader_token_disk_fallback.py  test_ctrader_token_invalid_retry.py  test_dispatcher_per_broker_guards.py  test_execution_invariants_legacy_be.py  test_feed_watchdog_atomic_write.py  test_feed_watchdog_autorestart.py  test_feed_watchdog_french_month_parsing.py  test_feed_watchdog_positions_state_failloud.py  test_feed_watchdog_positions_state_mtime.py  test_feed_watchdog_subprocess_timeout.py  test_feed_watchdog_weekend_backoff.py  test_feed_watchdog_weekend_with_positions.py  test_gft_execution_integrity.py  test_health_report_multibroker.py  test_invariants_be_market_roundtrip.py  test_invariants_broker_filter.py  test_journal_spread_snapshot.py  test_live_account_risk_reservations.py  test_live_ctrader_startup_retry.py  test_notification_routing.py  test_order_confirmation_unknown_is_pending.py  test_pending_fill_position_resolution.py  (+21 more)
(+120 files in other folders)
