[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "arabesque"
version = "8.3.0"
description = "Système de trading algorithmique — stratégie trend-following H1 pour prop firms"
requires-python = ">=3.10"
license = {text = "Proprietary"}

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "twisted>=23.0",
    "aiohttp>=3.9",
    "requests>=2.31",
    "python-telegram-bot>=20.0",
    "ctrader-open-api",
]

[project.scripts]
arabesque = "arabesque.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arabesque*"]

[tool.setuptools.package-data]
"arabesque.strategies.extension" = ["params.yaml", "STRATEGY.md"]
"arabesque.data" = ["instruments.csv"]
