[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arabesque"
version = "8.3.0"
description = "Système de trading algorithmique — stratégie trend-following H1 pour prop firms"
requires-python = ">=3.10"
license = {text = "Proprietary"}

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "twisted>=23.0",
    "aiohttp>=3.9",
    "requests>=2.31",
    "python-telegram-bot>=20.0",
    "ctrader-open-api",
]

[project.optional-dependencies]
# Installé via install.sh avec --no-deps + deps manuelles (conflit requests)
tradelocker = [
    "PyJWT>=2.8.0",
    "joblib>=1.4.2",
    "python-dotenv>=1.0.0",
]
# Sources de données alternatives
data = [
    "ccxt",
    "yfinance",
]
# Notifications multi-canaux
notify = [
    "apprise",
]
# Tout sauf tradelocker (géré séparément)
all = [
    "ccxt",
    "yfinance",
    "apprise",
]

[project.scripts]
arabesque = "arabesque.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arabesque*"]

[tool.setuptools.package-data]
"arabesque.strategies.extension" = ["params.yaml", "STRATEGY.md"]
"arabesque.data" = ["instruments.csv"]
