[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arabesque"
version = "8.3.0"
description = "Système de trading algorithmique — stratégie trend-following H1 pour prop firms"
requires-python = ">=3.10"
license = {text = "Proprietary"}

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "twisted>=23.0",
    "aiohttp>=3.9",
    "requests>=2.31",
    "python-telegram-bot>=20.0",
    "ctrader-open-api",
]

[project.optional-dependencies]
# Installé via install.sh avec --no-deps + deps manuelles (conflit requests)
tradelocker = [
    "PyJWT>=2.8.0",
    "joblib>=1.4.2",
    "python-dotenv>=1.0.0",
]
# Sources de données alternatives
data = [
    "ccxt",
    "yfinance",
]
# Notifications multi-canaux
notify = [
    "apprise",
]
# Tout sauf tradelocker (géré séparément)
all = [
    "ccxt",
    "yfinance",
    "apprise",
]

[project.scripts]
arabesque = "arabesque.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arabesque*"]

[tool.setuptools.package-data]
"arabesque.strategies.extension" = ["params.yaml", "STRATEGY.md"]
"arabesque.data" = ["instruments.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tmp", "barres_au_sol", "logs", "reports", "resources", ".venv"]

# ─── Hygiène : lint + détection de code mort ─────────────────────────────────
# Garde-fou contre le sprawl IA (imports/variables inutilisés, noms non définis,
# code mort). Lancer :  ruff check arabesque/   et   vulture
[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["tmp", "barres_au_sol", "logs", "reports", "resources", ".venv"]

[tool.ruff.lint]
# E = pycodestyle, F = pyflakes (imports/variables inutilisés, noms non définis).
# E501 (longueur de ligne) ignoré : bruit faible valeur sur du code existant.
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Les scripts autonomes insèrent la racine du repo dans sys.path avant les
# imports arabesque — E402 y est structurel, pas un oubli.
"scripts/*" = ["E402"]

[tool.vulture]
min_confidence = 80
paths = ["arabesque"]
exclude = ["tmp/", ".venv/", "barres_au_sol/"]
